Lista de alarmas solucionado

--- a/app/src/main/res/menu/menu_contextual.xml
+++ b/app/src/main/res/menu/menu_contextual.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/mcSolucionada"
+        android:title="Alarma solucionada">
+    </item>
+    <item
         android:id="@+id/mcVerDetalle"
         android:title="@string/ver_detalle">
     </item>
